debug: in-tree volumes

--- a/config/templates/config-docker.conf
+++ b/config/templates/config-docker.conf
@@ -86,7 +86,7 @@ fi
 DOCKER_FLAGS+=(-v=$SRC/:/root/armbian/)
 
 # mount 2 named volumes - for cacheable data and compiler cache
-DOCKER_FLAGS+=(-v=armbian-cache:/root/armbian/cache -v=armbian-ccache:/root/.ccache)
+DOCKER_FLAGS+=(-v=$SRC/volumes/cache:/root/armbian/cache -v=$SRC/volumes/ccache:/root/.ccache)
 
 DOCKER_FLAGS+=(-e COLUMNS="`tput cols`" -e LINES="`tput lines`")
 
